# n-puzzle-solver-with-CV

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
include/: analyzePuzzle.h  gui.h  puzzle.h
src/: analyzePuzzle.cpp  gui.cpp  main.cpp  puzzle.cpp  puzzle.h
